# chart_patterns

./: .gitignore  README.md  pyproject.toml  requirements.txt
chart_patterns/: charts_utils.py  doubles.py  flag.py  head_and_shoulders.py  inverse_head_and_shoulders.py  pennant.py  pivot_points.py  plotting.py  triangles.py  utils.py
tests/: test_double.py  test_flag.py  test_head_and_shoulders.py  test_inverse_head_and_shoulders.py  test_pennant.py  test_triangle.py
