[tool.poetry]
name = "chart-patterns"
version = "0.1.0"
description = ""
authors = ["Info Zetra <info@zetra.io>"]
readme = "README.md"
packages = [{include = "chart_patterns"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pandas = "1.3.5"
plotly = "^5.18.0"
scipy = "1.8.0"
pytest = "^7.4.4"
kaleido = "0.1.0post1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
